allprojects {
//    apply plugin: 'maven'
    apply plugin: 'java-gradle-plugin'
    apply plugin: 'java-library'
    apply plugin: 'idea'
    group = 'myWeb'
    version = '1.1-SNAPSHOT'
    idea {
        module {
            outputDir file('build/classes/main')
            testOutputDir file('build/classes/test')
        }
    }
}

subprojects {
    apply plugin: 'java'
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
    }


    repositories {
        mavenLocal()
        maven { url "https://maven.aliyun.com/repository/public" }
        maven { url "https://repo.maven.apache.org/maven2" }
        maven { url "https://repo.spring.io/libs-snapshot" }
        maven { url "https://repo.spring.io/libs-milestone" }
    }


    dependencies {
        testImplementation 'junit:junit:4.12'
        testImplementation 'org.hamcrest:hamcrest-all:1.3'
        testImplementation 'org.hamcrest:hamcrest-core:1.3'
    }




}
